CORE-653 - Changed fixed nav on small screens to use a media query

--- a/css/navigation.less
+++ b/css/navigation.less
@@ -18,9 +18,18 @@ permissions and limitations under the License.
         z-index: 1100;
     }
 
-    .nav-fixed {
-        position: fixed;
-        width: 100%;
+}
+
+
+@media(max-width: 768px) {
+
+    .mw-bs {
+
+        .navbar {
+            width: 100% !important;
+            position: fixed !important;
+        }
+
     }
 
 }
